--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
   <color name="teal_700">#FF018786</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+
+  <!--Secondary colors-->
+  <color name="colorTranslucent">#50000000</color>
+  <color name="lightColor">#64E71A</color>
+  <color name="lightGray">#D1D0D0</color>
+  <color name="darkBrown">#2B2828</color>
+  <color name="colorPrimary">#2196f3</color>
+  <color name="colorPrimaryDark">#1565c0</color>
+  <color name="colorAccent">#0097A7</color>
 </resources>
